--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "clear:all": "rm -rf node_modules/ && npm run clear",
         "count": "find src -name '*.js' | xargs wc -l | sort -r",
         "build": "webpack -p",
-        "dev": "webpack-dev-server --content-base dist/"
+        "dev": "webpack-dev-server --watch-poll --content-base dist/"
     },
     "devDependencies": {
         "babel-core": "^6.24.0",
