--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "mars",
+    "name": "codename-mars",
     "version": "1.0.4",
     "description": "Mars game",
     "author": {
@@ -7,8 +7,7 @@
         "email": "kernel.no.found@gmail.com"
     },
     "scripts": {
-        "audit": "source-map-explorer public/dist/main.bundle.js",
-        "clear": "rm -rf public/dist/",
+        "clear": "rm -rf dist/",
         "clear:all": "rm -rf node_modules/ && npm run clear",
         "count": "find src -name '*.js' | xargs wc -l | sort -r",
         "build": "webpack -p",
@@ -24,7 +23,6 @@
         "ngraph.graph": "0.0.14",
         "ngraph.path": "^1.0.2",
         "phaser": "^3.9.0",
-        "source-map-explorer": "^1.3.3",
         "webpack": "^2.7.0",
         "webpack-dev-server": "^2.1.4"
     },
