--- a/package.json
+++ b/package.json
@@ -1,42 +1,45 @@
 {
-    "name": "codename-mars",
-    "version": "1.0.4",
-    "description": "Mars game",
-    "author": {
-        "name": "Juan Jose Alonso",
-        "email": "kernel.no.found@gmail.com"
-    },
-    "scripts": {
-        "clear": "rm -rf dist/",
-        "clear:all": "rm -rf node_modules/ && npm run clear",
-        "count": "find src -name '*.js' | xargs wc -l | sort -r",
-        "build": "webpack -p",
-        "dev": "webpack-dev-server --watch-poll --content-base dist/"
-    },
-    "devDependencies": {
-        "babel-core": "^6.24.0",
-        "babel-loader": "^6.4.1",
-        "babel-preset-es2015": "^6.24.0",
-        "babel-preset-es2016": "^6.22.0",
-        "file-loader": "^1.1.11",
-        "html-webpack-plugin": "^3.2.0",
-        "ngraph.graph": "0.0.14",
-        "ngraph.path": "^1.0.2",
-        "phaser": "^3.9.0",
-        "webpack": "^2.7.0",
-        "webpack-dev-server": "^2.1.4"
-    },
-    "keywords": [
-        "webpack",
-        "babel",
-        "starter",
-        "source map",
-        "explorer",
-        "count",
-        "loc"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/piecioshka/boilerplate-babel-webpack"
-    }
+  "name": "codename-mars",
+  "version": "1.0.4",
+  "description": "Mars game",
+  "author": {
+    "name": "Juan Jose Alonso",
+    "email": "kernel.no.found@gmail.com"
+  },
+  "scripts": {
+    "clear": "rm -rf dist/",
+    "clear:all": "rm -rf node_modules/ && npm run clear",
+    "count": "find src -name '*.js' | xargs wc -l | sort -r",
+    "build": "npm run clear && webpack -p",
+    "dev": "webpack-dev-server --watch-poll --content-base dist/"
+  },
+  "devDependencies": {
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-es2016": "^6.22.0",
+    "copy-webpack-plugin": "^4.5.1",
+    "html-webpack-plugin": "^3.2.0",
+    "ngraph.graph": "0.0.14",
+    "ngraph.path": "^1.0.2",
+    "phaser": "^3.10.1",
+    "webpack": "^2.7.0",
+    "webpack-dev-server": "^2.1.4"
+  },
+  "keywords": [
+    "webpack",
+    "babel",
+    "starter",
+    "source map",
+    "explorer",
+    "count",
+    "loc"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/piecioshka/boilerplate-babel-webpack"
+  },
+  "dependencies": {
+    "merge-jsons-webpack-plugin": "^1.0.15"
+  }
 }
