--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   },
   "scripts": {
     "clear": "rm -rf dist/",
-    "clear:all": "rm -rf node_modules/ && npm run clear",
     "count": "find src -name '*.js' | xargs wc -l | sort -r",
     "build": "npm run clear && webpack -p",
-    "dev": "webpack-dev-server --watch-poll --content-base dist/"
+    "dev": "webpack-dev-server --port 8086 --watch-poll --content-base dist/",
+    "tunnel": "ngrok http --host-header=rewrite 8086"
   },
   "devDependencies": {
     "babel-core": "^6.24.0",
@@ -22,6 +22,7 @@
     "html-webpack-plugin": "^3.2.0",
     "ngraph.graph": "0.0.14",
     "ngraph.path": "^1.0.2",
+    "ngrok": "^3.0.1",
     "phaser": "^3.10.1",
     "webpack": "^2.7.0",
     "webpack-dev-server": "^2.1.4"
