--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-es2016": "^6.22.0",
     "copy-webpack-plugin": "^4.5.1",
     "html-webpack-plugin": "^3.2.0",
+    "http-server": "^0.11.1",
     "ngraph.graph": "0.0.14",
     "ngraph.path": "^1.0.2",
     "ngrok": "^3.0.1",
